--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -1,8 +1,8 @@
 \doxysection{Liste des classes}
 Liste des classes, structures, unions et interfaces avec une brève description \+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{structchaine}{chaine}} }{\pageref{structchaine}}{}
-\item\contentsline{section}{\mbox{\hyperlink{structclient}{client}} }{\pageref{structclient}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structchaine}{chaine}} \\*Informations d\textquotesingle{}une chaine }{\pageref{structchaine}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structclient}{client}} \\*Stockage connexion client }{\pageref{structclient}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structdescripteurs}{descripteurs}} }{\pageref{structdescripteurs}}{}
-\item\contentsline{section}{\mbox{\hyperlink{structinfoClients}{info\+Clients}} }{\pageref{structinfoClients}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structinfoClients}{info\+Clients}} \\*Stockage infos clients }{\pageref{structinfoClients}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structtransfert}{transfert}} }{\pageref{structtransfert}}{}
 \end{DoxyCompactList}
