--- a/docs/latex/structchaine.tex
+++ b/docs/latex/structchaine.tex
@@ -2,6 +2,11 @@
 \label{structchaine}\index{chaine@{chaine}}
 
 
+Informations d\textquotesingle{}une chaine.  
+
+
+
+
 Graphe de collaboration de chaine\+:
 % FIG 0
 \doxysubsection*{Attributs publics}
@@ -23,6 +28,11 @@ int {\bfseries nb}
 struct \mbox{\hyperlink{structclient}{client}} $\ast$ {\bfseries liste\+Clients}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Description détaillée}
+Informations d\textquotesingle{}une chaine. 
+
+Structure stockant le nom de la chaine, une description associée, le nombre de clients max pouvant se connecter, le nombre de clients actuellement connecté, ainsi que la liste des clients connectés 
 
 La documentation de cette structure a été générée à partir du fichier suivant \+:\begin{DoxyCompactItemize}
 \item 
