--- a/docs/latex/structclient.tex
+++ b/docs/latex/structclient.tex
@@ -1,5 +1,10 @@
 \hypertarget{structclient}{}\doxysection{Référence de la structure client}
 \label{structclient}\index{client@{client}}
+
+
+Stockage connexion client.  
+
+
 \doxysubsection*{Attributs publics}
 \begin{DoxyCompactItemize}
 \item 
@@ -10,6 +15,11 @@ int {\bfseries dS}
 char {\bfseries pseudo} \mbox{[}20\mbox{]}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Description détaillée}
+Stockage connexion client. 
+
+Pour chaque client, on stock dans les informations d\textquotesingle{}une chaine sa socket et son pseudo 
 
 La documentation de cette structure a été générée à partir du fichier suivant \+:\begin{DoxyCompactItemize}
 \item 
