--- a/docs/latex/structinfoClients.tex
+++ b/docs/latex/structinfoClients.tex
@@ -1,5 +1,10 @@
 \hypertarget{structinfoClients}{}\doxysection{Référence de la structure info\+Clients}
 \label{structinfoClients}\index{infoClients@{infoClients}}
+
+
+Stockage infos clients.  
+
+
 \doxysubsection*{Attributs publics}
 \begin{DoxyCompactItemize}
 \item 
@@ -10,6 +15,11 @@ int {\bfseries dS}
 pthread\+\_\+t {\bfseries thread}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Description détaillée}
+Stockage infos clients. 
+
+Pour chaque client, on stock sa socket et son thread associé 
 
 La documentation de cette structure a été générée à partir du fichier suivant \+:\begin{DoxyCompactItemize}
 \item 
