--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -162,7 +162,7 @@
 \begin{titlepage}
 \vspace*{7cm}
 \begin{center}%
-{\Large Projet F\+AR }\\
+{\Large Z\+AC Talk }\\
 \vspace*{1cm}
 {\large Généré par Doxygen 1.8.17}\\
 \end{center}
